force-app/main/default/objects/Country_Country_Ref__c/Country_Country_Ref__c.object-meta.xml
<CustomObject>
    <label>Country Country Ref</label>
    <pluralLabel>Country Country Refs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Country Country Ref Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>