force-app/main/default/objects/Country_Country_Ref__c/fields/Country_Save_State__c.field-meta.xml
<CustomField>
    <fullName>Country_Save_State__c</fullName>
    <label>Country Save State</label>
    <type>MasterDetail</type>
    <referenceTo>Country_Save_State__c</referenceTo>
    <relationshipName>Country_References</relationshipName>
</CustomField>