force-app/main/default/objects/Country_Country_Ref__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Text</type>
    <length>255</length>
</CustomField>