force-app/main/default/objects/Country_Country_Ref__c/fields/Target_Country_Tag__c.field-meta.xml
<CustomField>
    <fullName>Target_Country_Tag__c</fullName>
    <label>Target Country Tag</label>
    <type>Text</type>
    <length>10</length>
</CustomField>